tests/baselines/reference/parserIndexSignature3(strict=true).errors.txt
parserIndexSignature3.ts(2,4): error TS7006: Parameter 'a' implicitly has an 'any' type.
parserIndexSignature3.ts(2,5): error TS1019: An index signature parameter cannot have a question mark.


==== parserIndexSignature3.ts (2 errors) ====
    interface I {
      [a?]
       ~~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
        ~
!!! error TS1019: An index signature parameter cannot have a question mark.
    }